fix footer space and fix first section mobile

--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -52,6 +52,9 @@
 }
 
 @media screen and (max-width: 991px) {
+	#home-video-header-container {
+		display: none;
+	}
 	.site-title {
 		font-size: 2.5rem;
 		color: #87ED06;
@@ -94,6 +97,15 @@
 	}
 	.responsive-menu-button {
 		display: block;
+	}
+	.swiper-featured-articles-block{
+		.swiper-pagination-bullet-active{
+			background-color: #ec4100 !important;
+		}
+		.swiper-pagination-bullet{
+			background-color: #D9D9D9;
+			opacity: 1;
+		}
 	}
 }
 
@@ -194,9 +206,6 @@
 		.single-author-img{
 			width: 100%;
 		}
-	}
-	#home-video-header-container {
-		display: none;
 	}
 
 
